Updated database schema and stub to include mapping from external to internal ID