@@ -4,11 +4,7 @@ import dev.coms4156.project.DatabaseConnection;
 import dev.coms4156.project.Department;
 import dev.coms4156.project.Employee;
 import dev.coms4156.project.Organization;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * A test-stub of the database connection class, using in-memory data only.
@@ -24,47 +20,65 @@ public class DatabaseConnectionStub extends DatabaseConnection {
     initializeTestData(); // test
   }
 
-  public List<Employee> getEmployees(int clientId) {
-    return testEmployees.getOrDefault(clientId, new ArrayList<>()); // test
+  public Employee getEmployee(int organizationId, int externalEmployeeId) {
+    List<Employee> employees = testEmployees.get(organizationId);
+    if (employees != null) {
+      for (Employee employee : employees) {
+        if (employee.getId() == externalEmployeeId) {
+          return employee;
+        }
+      }
+    }
+    return null;
   }
 
-  public List<Department> getDepartments(int clientId) {
-    return testDepartments.getOrDefault(clientId, new ArrayList<>());
+  public Department getDepartment(int organizationId, int externalDepartmentId) {
+    List<Department> departments = testDepartments.get(organizationId);
+    if (departments != null) {
+      for (Department department : departments) {
+        if (department.getId() == externalDepartmentId) {
+          return department;
+        }
+      }
+    }
+    return null;
   }
 
-  public Organization getOrganization(int clientId) {
-    return testOrganizations.getOrDefault(clientId, new Organization(null, clientId, "Unknown"));
+  public List<Employee> getEmployees(int organizationId) {
+    return testEmployees.getOrDefault(organizationId, new ArrayList<>()); // test
+  }
+
+  public List<Department> getDepartments(int organizationId) {
+    return testDepartments.getOrDefault(organizationId, new ArrayList<>());
+  }
+
+  public Organization getOrganization(int organizationId) {
+    return testOrganizations.getOrDefault(organizationId, new Organization(null, organizationId, "Unknown"));
   }
 
   private void initializeTestData() {
     // create test employees and departments
+    // For clientId = 1
+    int clientId = 1;
     Department engineering = new Department(null, 1, "Engineering", new ArrayList<>());
     Employee alice = new Employee(null, 1, "Alice", new Date());
-    Employee lina = new Employee(null, 4, "Lina", new Date());
-    Employee john = new Employee(null, 5, "John", new Date());
+    Employee bob = new Employee(null, 2, "Bob", new Date());
     engineering.addEmployee(alice);
-    engineering.addEmployee(lina);
-    engineering.addEmployee(john);
+    engineering.addEmployee(bob);
 
     Department hr = new Department(null, 2, "HR", new ArrayList<>());
-    Employee bob = new Employee(null, 2, "Bob", new Date());
-    Employee jane = new Employee(null, 6, "Jane", new Date());
-    Employee emily = new Employee(null, 7, "Emily", new Date());
-    hr.addEmployee(bob);
-    hr.addEmployee(jane);
-    hr.addEmployee(emily);
+    Employee charlie = new Employee(null, 3, "Charlie", new Date());
+    hr.addEmployee(charlie);
 
     // Add departments to the organization
-    Employee max = new Employee(null, 3, "Max", new Date());
-    Organization organization = new Organization(null, 1L, "Test Organization");
+    Organization organization = new Organization(null, clientId, "Test Organization");
     organization.addDepartment(engineering);
     organization.addDepartment(hr);
-    organization.addEmployee(max);
 
     // Store employees, departments, and organizations in the fake database
-    testEmployees.put(1, List.of(alice, bob, max, lina, john, jane, emily));
-    testDepartments.put(1, List.of(engineering, hr));
-    testOrganizations.put(1, organization);
+    testEmployees.put(clientId, Arrays.asList(alice, bob, charlie));
+    testDepartments.put(clientId, Arrays.asList(engineering, hr));
+    testOrganizations.put(clientId, organization);
   }
 
   @Override
@@ -88,5 +102,4 @@ public class DatabaseConnectionStub extends DatabaseConnection {
     }
     return instance;
   }
-
 }
